--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             
             // Create an egg element
             const eggElement = document.createElement('img');
-            eggElement.src = 'https://via.placeholder.com/50?text=E';
+            eggElement.src = 'Screenshot 2024-03-29 110138.png';
             eggElement.style.position = 'absolute';
             eggElement.style.left = `${Math.random() * (window.innerWidth - 50)}px`;
             eggElement.style.top = `${Math.random() * (window.innerHeight - 50)}px`;
