--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
     <!-- Simple Idle Game Section -->
     <div style="margin-top: 50px;">
-        <h2>Simple Idle Game</h2>
-        <p>Click the button to collect points and toggle between egg images!</p>
+        <h2>Catwifegg click</h2>
+        <p>Click the button please</p>
         <button id="idleButton" class="button">Click Me!</button>
         <div class="textbox">Points: <span id="points">0</span></div>
     </div>
